Show hosts screen on first launch only